feat: add support for images.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 anyhow = "1.0.68"
 elementtree = "1.2.3"
 image = "0.24.5"
+imagesize = "0.11.0"
 resvg = "0.28.0"
 serde = "1.0.152"
 serde_yaml = "0.9.16"
