feat: support args process via clap, add an example.

--- a/examples/basic.yaml
+++ b/examples/basic.yaml
@@ -2,10 +2,26 @@ layers:
 - type: Background
   bg_type: !Linear
     stops:
-    - - '#000000'
+    - - 'hsl(240 100% 20%)'
       - 0%
-    - - '#ffffff'
+    - - 'hsl(289 100% 21%)'
+      - 22%
+    - - 'hsl(315 100% 27%)'
+      - 36%
+    - - 'hsl(329 100% 36%)'
+      - 48%
+    - - 'hsl(337 100% 43%)'
+      - 57%
+    - - 'hsl(357 91% 59%)'
+      - 66%
+    - - 'hsl(17 100% 59%)'
+      - 74%
+    - - 'hsl(34 100% 53%)'
+      - 82%
+    - - 'hsl(45 100% 50%)'
+      - 90%
+    - - 'hsl(55 100% 50%)'
       - 100%
-    degree: 45.0
+    degree: 35.0
 - type: Image
   path: ./assets/input.png
