--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.68"
+clap = { version = "4.1.1", features = ["derive"] }
 elementtree = "1.2.3"
 image = "0.24.5"
 imagesize = "0.11.0"
