--- a/engine/Cargo.toml
+++ b/engine/Cargo.toml
@@ -13,4 +13,5 @@ serde = {version = "1.0.152", features = ["derive"]}
 typetag = "0.2"
 
 [dev-dependencies]
+pretty_assertions = "1.3.0"
 serde_yaml = "0.9.16"
