refactor: support cli.

--- a/examples/basic.yaml
+++ b/examples/basic.yaml
@@ -1,27 +1,43 @@
-layers:
-- type: Background
-  bg_type: !Linear
-    stops:
-    - - 'hsl(240 61% 60%)'
-      - 0%
-    - - 'hsl(280 50% 55%)'
-      - 22%
-    - - 'hsl(314 54% 56%)'
-      - 36%
-    - - 'hsl(334 72% 64%)'
-      - 48%
-    - - 'hsl(349 83% 70%)'
-      - 57%
-    - - 'hsl(5 87% 73%)'
-      - 66%
-    - - 'hsl(18 85% 72%)'
-      - 74%
-    - - 'hsl(29 76% 73%)'
-      - 82%
-    - - 'hsl(40 64% 75%)'
-      - 90%
-    - - 'hsl(55 49% 79%)'
-      - 100%
-    degree: 55.0
-- type: Image
-  path: ./assets/input.png
+styles:
+  img:
+    image: ./assets/input.png
+  bg:
+    color: !Linear
+      stops:
+      - - hsl(240 46% 65%)
+        - 0%
+      - - hsl(259 43% 64%)
+        - 10%
+      - - hsl(295 34% 63%)
+        - 22%
+      - - hsl(313 39% 65%)
+        - 27%
+      - - hsl(325 48% 68%)
+        - 32%
+      - - hsl(335 55% 70%)
+        - 36%
+      - - hsl(343 60% 73%) 
+        - 41%
+      - - hsl(351 64% 75%) 
+        - 45%
+      - - hsl(359 66% 77%) 
+        - 49%
+      - - hsl(6 68% 77%) 
+        - 53%
+      - - hsl(12 69% 77%) 
+        - 58%
+      - - hsl(18 68% 78%) 
+        - 62%
+      - - hsl(23 65% 78%) 
+        - 67%
+      - - hsl(28 62% 78%) 
+        - 72%
+      - - hsl(33 57% 79%) 
+        - 77%
+      - - hsl(39 51% 81%) 
+        - 83%
+      - - hsl(46 44% 82%) 
+        - 91%
+      - - hsl(56 37% 84%) 
+        - 100%
+      degree: 35.0
