--- a/engine/Cargo.toml
+++ b/engine/Cargo.toml
@@ -10,6 +10,7 @@ anyhow = "1.0.68"
 elementtree = "1.2.3"
 imagesize = "0.11.0"
 serde = {version = "1.0.152", features = ["derive"]}
+thiserror = "1.0.38"
 typetag = "0.2"
 
 [dev-dependencies]
