--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -11,3 +11,4 @@ resvg = "0.28.0"
 clap = { version = "4.1.1", features = ["derive"] }
 footlights-engine = { path = "../engine" }
 serde_yaml = "0.9.16"
+image = "0.24.5"
